Fix sideboard cards being blurry on firefox

--- a/src/routes/game/lobby/components/deck/Deck.module.css
+++ b/src/routes/game/lobby/components/deck/Deck.module.css
@@ -158,11 +158,11 @@
 }
 
 .container input + div > img {
-  filter: brightness(0.5);
-  transition: filter 0.25s, box-shadow 0.25s;
+  opacity: 0.6;
+  transition: opacity 0.25s, box-shadow 0.25s;
 }
 
 .container input[type='checkbox']:checked + div > img {
   box-shadow: 0 0 0 2px var(--theme-primary);
-  filter: brightness(1);
+  opacity: 1;
 }
